# riperf3

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  SECURITY.md
.claude/commands/: sandbox-benchmark.md  sandbox-provision.md  sandbox-start.md
.github/workflows/: ci.yml  hammer.yml  interop.yml
libriperf3/: Cargo.toml
libriperf3/src/: iperf_api.rs  lib.rs
riperf3/: Cargo.toml
riperf3-cli/: Cargo.toml
riperf3-cli/src/: cli.rs  main.rs
riperf3-cli/tests/: bidir_intervals.rs  byte_limit_summary.rs  daemon.rs  end_block_text.rs  end_conditions.rs  error_format.rs  format_flag.rs  get_server_output.rs  gsro.rs  json_stream.rs  mss_blksize.rs  omit_behavior.rs  pidfile.rs  self_terminate.rs  server_placeholders.rs  setup_retry.rs  signal_terminate.rs  text_lines.rs  udp_demux.rs  udp_end_block_json.rs  udp_pacing.rs  wire_shape.rs
riperf3-cli/tests/common/: mod.rs
riperf3-test-support/: Cargo.toml
riperf3-test-support/src/: lib.rs
riperf3/src/: auth.rs  client.rs  cpu.rs  error.rs  iperf_api.rs  json_report.rs  lib.rs  macros.rs  main.rs  net.rs  outcome.rs  protocol.rs  reporter.rs  server.rs  stream.rs  tcp_info.rs  units.rs  utils.rs
riperf3/tests/: bound_server.rs  integration.rs  quiet_output.rs  stream_thread_readiness.rs  teardown.rs
riperf3/tests/common/: mod.rs
riperf3/tests/fixtures/: test_private.pem  test_private_pkcs1.pem  test_public.pem  test_public_pkcs1.pem  test_users.csv
scripts/: analyze.py  bench.sh  build-iperf3.sh  compat.sh  interop.sh  xcheck.sh
