# Cargo.toml for riperf3 workspace
[workspace]
resolver = "2"
members = [
    "riperf3",
    "riperf3-cli",
    "riperf3-test-support",
]

[workspace.package]
version = "0.9.0"
authors = ["Evan Henry"]
edition = "2021"
# MSRV floor 1.85 (review r1, verified empirically): the locked base64ct 1.8
# (rsa chain) is edition 2024, which needs Cargo >= 1.85. Our own code's floor
# is 1.82 (Option::is_none_or); the v4 lockfile itself parses fine on older
# Cargo (>= 1.78). Enforced by the pinned-MSRV CI check job.
rust-version = "1.85"
homepage = "https://github.com/therealevanhenry/riperf3"
repository = "https://github.com/therealevanhenry/riperf3"
keywords = ["riperf3", "iperf3", "iperf", "network", "speedtest"]
description = "A Rust library and CLI for running iperf3 speed tests."

[workspace.dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
log = "0.4"
nix = { version = "0.29", features = ["net", "sched", "process", "resource", "fs", "term", "socket", "zerocopy", "feature"] }
rpassword = "5"
log4rs = { version = "1.3", features = ["toml_format"] }
rand = "0.9"
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
socket2 = "0.5"
thiserror = "2.0"
# tokio >= 1.44: its Windows HandlerRoutine parks for close/logoff/shutdown
# (tokio #7122) — earlier versions returned immediately and lost the clean
# pidfile-unlink race (#158 review). libc is lockfile-held at 1.44's floor
# (0.2.168): 0.2.186 breaks nix-0.29/mio-1.0.2 on NetBSD (untied by a future
# nix >= 0.30 bump).
tokio = { version = "1.44", features = ["full"] }
windows-sys = { version = "0.52", features = ["Win32_Networking_WinSock", "Win32_System_Threading"] }

[profile.release]
strip = "symbols"
