[package]
name = "riperf3-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# riperf3 workspace dependencies
riperf3 = { path = "../riperf3" }

# external dependencies
clap.workspace = true
libc.workspace = true
log.workspace = true
log4rs.workspace = true
thiserror.workspace = true
tokio.workspace = true

[[bin]]
name = "riperf3"
path = "src/main.rs"
