[package]
name = "riperf3-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Wire-compatible Rust implementation of iperf3 — network performance testing CLI"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["network-programming", "command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
# riperf3 workspace dependencies
riperf3 = { path = "../riperf3", version = "0.1.1" }

# external dependencies
clap.workspace = true
libc.workspace = true
log.workspace = true
log4rs.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[[bin]]
name = "riperf3"
path = "src/main.rs"
