[package]
name = "riperf3-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Dev-only shared test helpers for the riperf3 workspace (#192)"

[dependencies]
# The JSON-aware pre-data classifier (#195) parses -J error docs.
serde_json = { workspace = true }
