[package]
name = "riperf3"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
libc.workspace = true
log.workspace = true
rand.workspace = true
rsa.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
serde_json.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
