[package]
name = "riperf3"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Wire-compatible Rust implementation of iperf3 — safe, cross-platform network performance testing library"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["network-programming", "command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

[dependencies]
base64.workspace = true
libc.workspace = true
log.workspace = true
rpassword.workspace = true
rand.workspace = true
rsa.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
serde_json.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
